Fix page transition jumping

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -54,7 +54,7 @@
 
 ::-webkit-scrollbar-track {
   background: var(--light);
-  box-shadow: 0 0 8px 0 inset var(--white);
+  box-shadow: 0 0 8px 0 inset var(--white), -10px -10px 4px rgba(0, 0, 0, 0.3);;
 }
 
 * {
@@ -91,6 +91,7 @@ body {
   grid-template-rows: auto fit-content(3rem);
   grid-template-areas: "body" "footer";
   min-height: 100%;
+  min-height: 100vh;
 }
 
 a {
